--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 <p>Before that, I received B.Eng. in software engineering from Northeastern University in China in 2018 and M.S. in cognitive neuroscience from East China Normal University in 2021. I worked with <a href="https://sysumelab.com/about-dr-yixuan-ku">Dr. Yixuan Ku</a> in <a href="https://sysumelab.com/">Memory and Emotion Lab</a> and did some studies about visual working memory and face perception.</p>
 
-<p>I am the author of <a href="https://zitonglu1996.github.io/NeuroRA/">NeuroRA</a> (a python toolbox for multi-modal neural data representational analysis), <a href="https://github.com/ZitongLu1996/Python-EEG-Handbook-CN">a Chinese Python handbook for EEG data analysis</a>, <a href="https://github.com/zitonglu1996/eeg2eeg">EEG2EEG</a> (a state-of-the-art inter-individual EEG converter).</p>
+<p>I am the author of <a href="https://zitonglu1996.github.io/NeuroRA/">NeuroRA</a> (a python toolbox for multi-modal neural data representational analysis), <a href="https://github.com/ZitongLu1996/Python-EEG-Handbook-CN">a Python EEG handbooks</a>, <a href="https://github.com/zitonglu1996/eeg2eeg">EEG2EEG</a> (a state-of-the-art inter-individual EEG converter).</p>
 
 <p>I am interested in <strong>understanding how we process object information in the complex and dynamics world using behavioral, EEG, fMRI and computational approaches</strong> and <strong>building more brain-like artificial neural networks</strong>.</p>
 
