--- a/presentations/index.html
+++ b/presentations/index.html
@@ -101,7 +101,35 @@
     <div class="content container">
       <div class="page">
   <h1 class="page-title">Presentations</h1>
-  <p><strong><em>2023:</em></strong></p>
+  <p><strong><em>2024:</em></strong></p>
+
+<p class="message" style="font-size: 16px;">
+06/03/2024  Dept of Psychology, Sun Yat-sen Univeristy
+<br />
+[Invited Talk] 	Bridging the Gap between Neuroscience and AI in Visual Perception
+<br />
+<br />
+05/20/2024  Dept of Psychology, Shenzhen University
+<br />
+[Invited Talk] 	Exploring Human Visual Mechanisms: Integrating Human EEG and Artificial Neural Networks
+<br />
+<br />
+05/20/2024  Vision Sciences Society (VSS) 2024
+<br />
+[Talk] 	Human EEG and artificial neural networks reveal disentangled representations of object real-world size in natural images
+<br />
+<br />
+05/19/2024  Vision Sciences Society (VSS) 2024
+<br />
+[Poster] Object size and depth representations in human visual cortex
+<br />
+<br />
+03/22/2024  CogNeuro Prosem, OSU
+<br />
+[Talk] Exploring human vision through Img2EEG: An encoding framework generating high-resolution temporal EEG signals from visual inputs
+</p>
+
+<p><strong><em>2023:</em></strong></p>
 
 <p class="message" style="font-size: 16px;">
 12/07/2023  OSU CCBBI Research Day 2023
