--- a/publications/index.html
+++ b/publications/index.html
@@ -101,39 +101,21 @@
     <div class="content container">
       <div class="page">
   <h1 class="page-title">Publications</h1>
-  <p><strong><em>Peer-reviewed publications</em></strong>:</p>
+  <p><strong><em>Preprints &amp; Manuscripts submitted or in preparation</em></strong>:</p>
 <p class="message" style="font-size: 18px;">
-<strong>Lu. Z</strong>., &amp; Golomb, J.D. (In Press). Dynamic saccade context triggers more stable object-location binding. <strong><em>Journal of Experimental Psychology: General</em></strong>. Preprint on bioRxiv: <a href="https://www.biorxiv.org/content/10.1101/2023.04.26.538469">https://www.biorxiv.org/content/10.1101/2023.04.26.538469</a> [<a href="/files/2023Lu_BioRxiv_b.pdf">Preprint</a>]
+<strong>Lu, Z</strong>., Wang, Y., &amp; Golomb, J.D. (under review in CCN2024). ReAlnet: Achieving more human-brain like vision via human neural representational alignment. <strong><em>Arxiv</em></strong>. [<a href="/files/2024Lu_CCN_a.pdf">Pdf</a>]
 <br />
 <br />
-<strong>Lu, Z</strong>., &amp; Ku, Y. (2023). Bridging the Gap between EEG and DCNNs Reveals a Fatigue Machanism of Facial Repetition Suppression. <strong><em>iScience</em></strong>. 108501. <a href="https://doi.org/10.1016/j.isci.2023.108501">https://doi.org/10.1016/j.isci.2023.108501</a> [<a href="/files/2023Lu_iScience.pdf">Pdf</a>]
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (under review in CCN2024). Probing Human Vision via an Image-to-EEG Encoding Model. [<a href="/files/2024Lu_CCN_b.pdf">Pdf</a>]
 <br />
 <br />
-<strong>Lu, Z</strong>. (2023). Visualizing the Mind’s Eye: A Future Perspective on Applications of Image Reconstruction from Brain Signals to Psychiatry. <strong><em>Psychpradiology</em></strong>. kkad022. <a href="https://doi.org/10.1093/psyrad/kkad022">https://doi.org/10.1093/psyrad/kkad022</a> [<a href="/files/2023Lu_Psyrad.pdf">Pdf</a>]
+Ran, M., <strong>Lu, Z</strong>., &amp; Golomb, J.D. (submitted). The influence of a moving object’s location on object identity judgements. <strong><em>PsyArXiv</em></strong>. <a href="https://doi.org/10.31234/osf.io/dcrhu">https://doi.org/10.31234/osf.io/dcrhu</a> [<a href="/files/2024Ran_etal_PsyArXiv.pdf">Preprint Pdf</a>]
 <br />
 <br />
-<strong>Lu. Z</strong>., &amp; Golomb, J.D. (2023). Object real-world size representations in human brains and artificial neural networks. <strong><em>Proceedings of the Conference on Cognitive Computational Neuroscience 2023</em></strong>. <a href="https://doi.org/10.32470/CCN.2023.1227-0">https://doi.org/10.32470/CCN.2023.1227-0</a> [<a href="https://2023.ccneuro.org/proceedings/0000909.pdf">https://2023.ccneuro.org/proceedings/0000909.pdf</a>][<a href="/files/2023Lu_CCN.pdf">Pdf</a>]
+<strong>Lu, Z</strong>., Wang, Y., &amp; Golomb, J.D. (submitted). Achieving more human-brain like vision via human EEG representational alignment. <strong><em>Arxiv</em></strong>. <a href="https://doi.org/10.48550/arXiv.2401.17231">https://doi.org/10.48550/arXiv.2401.17231</a> [<a href="/files/2024Lu_Arxiv.pdf">Preprint Pdf</a>]
 <br />
 <br />
-<strong>Lu, Z</strong>., &amp; Golomb, J.D. (2023). Generate your neural signals from mine: individual-to-individual EEG converters. <strong><em>Proceedings of the 45th Annual Meeting of the Cognitive Science Society (CogSci 2023)</em></strong>. <a href="https://escholarship.org/uc/item/5xn0885t">https://escholarship.org/uc/item/5xn0885t</a> [<a href="/files/2023Lu_CogSci.pdf">Pdf</a>]
-<br />
-<br />
-<strong>Lu, Z</strong>., Shafer-Skelton, A., &amp; Golomb, J.D. (2022). Gaze-centered spatial representations in human hippocampus. <strong><em>Proceedings of the Conference on Cognitive Computational Neuroscience 2022</em></strong>. <a href="https://doi.org/10.32470/CCN.2022.1088-0">https://doi.org/10.32470/CCN.2022.1088-0</a> [<a href="https://2022.ccneuro.org/proceedings/0000614.pdf">https://2022.ccneuro.org/proceedings/0000614.pdf</a>][<a href="/files/2022Lu_CCN.pdf">Pdf</a>]
-<br />
-<br />
-<strong>Lu, Z</strong>., &amp; Ku, Y. (2020). NeuroRA: A Python toolbox of representational analysis from multi-modal neural data. <strong><em>Frontiers in Neuroinformatics</em></strong>. 14:563669. <a href="https://doi.org/10.3389/fninf.2020.563669">https://doi.org/10.3389/fninf.2020.563669</a> [<a href="/files/2021Lu_FININ.pdf">Pdf</a>][<a href="https://zitonglu1996.github.io/NeuroRA/">Link</a>][<a href="https://github.com/ZitongLu1996/NeuroRA">Code</a>]
-<br />
-<br />
-<strong>Lu, Z</strong>. (2020). PyCTRSA: A Python package for cross-temporal representational similarity analysis-based E/MEG decoding. <strong><em>Zenodo</em></strong>. <a href="">https://doi.org/10.5281/zenodo.4273674</a> [<a href="https://zenodo.org/record/4273674#.ZBiGNOzMLp4">Link</a>][<a href="https://github.com/ZitongLu1996/PyCTRSA">Code</a>]
-
-</p>
-
-<p><strong><em>Preprints &amp; Manuscripts submitted or in preparation</em></strong>:</p>
-<p class="message" style="font-size: 18px;">
 Zhang, M*., <strong>Lu, Z</strong>., Zhou, Y., Ma, W., Li, X., Otani, S., &amp; Wang, Z. (submitted). Transcultural differences in neural representations of Theory of Mind between Chinese and Japanese. [<a href="/files/2023Zhang_etal.pdf">Pdf</a>]
-<br />
-<br />
-<strong>Lu. Z</strong>., &amp; Golomb, J.D. (submitted). Human EEG and artificial neural networks reveal disentangled representations of object real-world size in natural images. <strong><em>BioRxiv</em></strong>. <a href="https://www.biorxiv.org/content/10.1101/2023.08.19.553999">https://www.biorxiv.org/content/10.1101/2023.08.19.553999</a> [<a href="/files/2023Lu_BioRxiv_c.pdf">Preprint Pdf</a>]
 <br />
 <br />
 Zhang, M., <strong>Lu, Z</strong>., Su, H., Kwok, S.C., Li, X., &amp; Wang, Z. (submitted). Musical expertise attenuates cross-modal fast-“same” effect of pitches: an ERP study. <strong><em>PsyArXiv</em></strong>. <a href="">https://doi.org/10.31234/osf.io/w74nr</a> [<a href="/files/2022Zhang_PsyArXiv.pdf">Preprint Pdf</a>]
@@ -142,13 +124,46 @@ Zhang, M., <strong>Lu, Z</strong>., Su, H., Kwok, S.C., Li, X., &amp; Wang, Z. (
 Clayson, P.E., …, <strong>Lu, Z</strong>., …, Langer. N. (2023 accepted, stage 1 registered replication). Contralateral delay activity as a marker of visual working memory capacity: a multi-site registered replication. <strong><em>PsyArXiv</em></strong>. <a href="https://psyarxiv.com/shdea/">https://psyarxiv.com/shdea/</a> [<a href="/files/2023Strzelczyk_PsyArXiv.pdf">Preprint Pdf</a>]
 <br />
 <br />
-Ran. M., <strong>Lu. Z</strong>., &amp; Golomb, J.D. (in preparation). The influence of a moving object’s location on object identity judgements.
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (in preparation). The influence of task-irrelevant landmarks on spatiotopic localization and object-location binding.
 <br />
 <br />
-<strong>Lu. Z</strong>., &amp; Golomb, J.D. (in preparation). The influence of task-irrelevant landmarks on spatiotopic localization and object-location binding.
+<strong>Lu, Z</strong>., Wang, Y., &amp; Golomb, J.D. (in preparation). Let artificial vision models learn human neural representations from fMRI in object recognition.
 <br />
 <br />
-<strong>Lu. Z</strong>., Wang. Y., &amp; Golomb, J.D. (in preparation). Mimicking human neural representations to achieve more human brain-like vision models via human EEG alignments.
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (in preparation). Exploring human vision through Img2EEG: An encoding framework generating high-resolution temporal EEG signals from visual inputs.
+
+</p>
+
+<p><strong><em>Peer-reviewed publications</em></strong>:</p>
+<p class="message" style="font-size: 18px;">
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (Reviewed Preprint in Progress). Human EEG and artificial neural networks reveal disentangled representations of object real-world size in natural images. <strong><em>Elife</em></strong>. Preprint on <strong><em>bioRxiv</em></strong>: <a href="https://www.biorxiv.org/content/10.1101/2023.08.19.553999">https://www.biorxiv.org/content/10.1101/2023.08.19.553999</a> [<a href="/files/2023Lu_BioRxiv_c.pdf">Preprint Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., Li, W., Nie, L., &amp; Zhao, K. (in press). A Best Practices Handbook for EEG Data Analysis with Python. <strong><em>Brain-X</em></strong>. Preprint on <strong><em>PsyArXiv</em></strong>: <a href="https://doi.org/10.31234/osf.io/dcmke">https://doi.org/10.31234/osf.io/dcmke</a> [<a href="/files/2024Lu_Arxiv.pdf">Preprint Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (2024). Dynamic saccade context triggers more stable object-location binding. <strong><em>Journal of Experimental Psychology: General</em></strong>. 153(4), 873-888. (<strong>APA "Editor's Choice" Paper!</strong>) <a href="https://doi.org/10.1037/xge0001545">https://doi.org/10.1037/xge0001545</a> [<a href="/files/2024Lu_JEPG.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., &amp; Ku, Y. (2023). Bridging the Gap between EEG and DCNNs Reveals a Fatigue Machanism of Facial Repetition Suppression. <strong><em>iScience</em></strong>. 108501. <a href="https://doi.org/10.1016/j.isci.2023.108501">https://doi.org/10.1016/j.isci.2023.108501</a> [<a href="/files/2023Lu_iScience.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>. (2023). Visualizing the Mind’s Eye: A Future Perspective on Applications of Image Reconstruction from Brain Signals to Psychiatry. <strong><em>Psychpradiology</em></strong>. kkad022. <a href="https://doi.org/10.1093/psyrad/kkad022">https://doi.org/10.1093/psyrad/kkad022</a> [<a href="/files/2023Lu_Psyrad.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (2023). Object real-world size representations in human brains and artificial neural networks. <strong><em>Proceedings of the Conference on Cognitive Computational Neuroscience 2023 (CCN 2023)</em></strong>. <a href="https://doi.org/10.32470/CCN.2023.1227-0">https://doi.org/10.32470/CCN.2023.1227-0</a> [<a href="https://2023.ccneuro.org/proceedings/0000909.pdf">https://2023.ccneuro.org/proceedings/0000909.pdf</a>][<a href="/files/2023Lu_CCN.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., &amp; Golomb, J.D. (2023). Generate your neural signals from mine: individual-to-individual EEG converters. <strong><em>Proceedings of the 45th Annual Meeting of the Cognitive Science Society (CogSci 2023)</em></strong>. <a href="https://escholarship.org/uc/item/5xn0885t">https://escholarship.org/uc/item/5xn0885t</a> [<a href="/files/2023Lu_CogSci.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., Shafer-Skelton, A., &amp; Golomb, J.D. (2022). Gaze-centered spatial representations in human hippocampus. <strong><em>Proceedings of the Conference on Cognitive Computational Neuroscience 2022 (CCN 2022)</em></strong>. <a href="https://doi.org/10.32470/CCN.2022.1088-0">https://doi.org/10.32470/CCN.2022.1088-0</a> [<a href="https://2022.ccneuro.org/proceedings/0000614.pdf">https://2022.ccneuro.org/proceedings/0000614.pdf</a>][<a href="/files/2022Lu_CCN.pdf">Pdf</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>., &amp; Ku, Y. (2020). NeuroRA: A Python toolbox of representational analysis from multi-modal neural data. <strong><em>Frontiers in Neuroinformatics</em></strong>. 14:563669. <a href="https://doi.org/10.3389/fninf.2020.563669">https://doi.org/10.3389/fninf.2020.563669</a> [<a href="/files/2021Lu_FININ.pdf">Pdf</a>][<a href="https://zitonglu1996.github.io/NeuroRA/">Link</a>][<a href="https://github.com/ZitongLu1996/NeuroRA">Code</a>]
+<br />
+<br />
+<strong>Lu, Z</strong>. (2020). PyCTRSA: A Python package for cross-temporal representational similarity analysis-based E/MEG decoding. <strong><em>Zenodo</em></strong>. <a href="">https://doi.org/10.5281/zenodo.4273674</a> [<a href="https://zenodo.org/record/4273674#.ZBiGNOzMLp4">Link</a>][<a href="https://github.com/ZitongLu1996/PyCTRSA">Code</a>]
 
 </p>
 
