--- a/research/index.html
+++ b/research/index.html
@@ -101,35 +101,85 @@
     <div class="content container">
       <div class="page">
   <h1 class="page-title">Research</h1>
-  <p class="message">
-  Hey there! This page is included as an example. Feel free to customize it for your own use upon downloading. Carry on!
+  <p>In the ever-changing and complex world we live in, we are constantly bombarded with visual information, which we process and integrate to form our perception, memory, and understanding of the environment. Although the input information is only two-dimensional and processed in the retina, our ability to perceive and comprehend the world remains steadfast.</p>
+
+<p>My research aims to</p>
+
+<p>(1) shed light on <strong>the behavioral and neural mechanisms of visual processing</strong> by combining human psychophysics, eye-tracking, neuroimaging techniques such as fMRI and EEG, computational methods including linear regression, MVPA, RSA, IEM, and pRF, as well as deep learning models.</p>
+
+<p>(2) <strong>map representations between human brains and artificial neural networks</strong> via representational alignment between human brains and models and image-to-brain encoding models.</p>
+
+<p>Below are the two main topics I am interested in with several subtopics and projects I am working on:</p>
+
+<h3 id="neural-and-behavioral-meachnisms-of-visual-perception">Neural and behavioral meachnisms of visual perception</h3>
+
+<blockquote>
+  <p>Object-location binding across saccades</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+Increasing studies have found interactions between object identity adn spatial location. Even when location is irrelevatn to the task, location can be bound to object representations. However, <strong>what's the reference framework of object-location binding? Is it retinotopic (gaze-centered) or spatiotopic (world-centered)?</strong>
+<br />
+I am investigating <strong>the dynamic framework of object-location binding across eye movements</strong>, using the Spatial Congruency Bias paradigm. This inverstigation is conducted from three perspectives:
+<br />
+(1) Observer's eye-movements: how dynamic saccade context (using multiple saccades) influences object-location binding.
+<br /> 
+(2) External environment: how the landmark influences object-location binding. 
+<br />
+(3) Object's movements: how object-location binding happens of a moving object.
 </p>
 
-<p>In the novel, <em>The Strange Case of Dr. Jeykll and Mr. Hyde</em>, Mr. Poole is Dr. Jekyll’s virtuous and loyal butler. Similarly, Poole is an upstanding and effective butler that helps you build Jekyll themes. It’s made by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+<blockquote>
+  <p>Depth perception and 3D integration</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+Visual input is initially captured in 2D on our retinas, however, we can know the location of an object in 3D spatial coordinates quickly. Our brains seamlessly integrate two-dimensional representations with various depth cues to form a three-dimensional perception. To better understand human depth perception, I am conducting research in two ways:
+<br />
+(1) <strong>Object depth and size representations in natural images</strong>: to explore the brain representations of preceived real-world depth, real-world size and relative size of the object in an image using EEG and computational approaches.  
+(2) <strong>Spatiotemporal representations of 3D perception</strong>: to unfold the spatiotemporal neural mechanisms of depth perception and 3D integration using a fMRI-EEG fusion computational framework.
+</p>
 
-<p>There are currently two themes built on Poole:</p>
+<blockquote>
+  <p>Generally spatial representation</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+As we move our eyes around the world, we are able to maintain a stable visual perception despite changes in the visual input. However, previous studies have found that our visual system, from primary visual cortex to higher level visual regions, represents object locations in natively reitnotopic (gaze-centered) rather than spatiotopic (gaze-independent) coordinates. This raised question of <strong>how can our brain form a stable spatial representation of objects</strong>.
+<br />
+Is spatiotopic information represented elsewhere in the brain, or can it be elicited in visual areas by some other factors (e.g., dynamic saccades, landmarks, etc.)? I am conducting fMRI studies to address these.
+</p>
 
-<ul>
-  <li><a href="http://hyde.getpoole.com">Hyde</a></li>
-  <li><a href="http://lanyon.getpoole.com">Lanyon</a></li>
-</ul>
+<h3 id="mapping-representations-between-human-brains-and-artificial-neural-networks">Mapping representations between human brains and artificial neural networks</h3>
 
-<p>Learn more and contribute on <a href="https://github.com/poole">GitHub</a>.</p>
+<blockquote>
+  <p>More brain-like artificial neural networks via human brain alignment</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+Although current artificial neural networks have very high performance in many tasks, they are still very different from the human brain. One way to achieve more brain-like models is to let models learn the internal representations of human brains. I am focusing on <strong>applying neural activations of humans brain (fMRI and EEG) to align the representation of artificial neural networks to implement really human brain-like models</strong>.
+</p>
 
-<h2 id="setup">Setup</h2>
+<blockquote>
+  <p>Brain encoding models</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+The most intuitive and direct way to understand the relationship between visual input from the world and neural computing in our brains is to get through from visual inputs to neural latent space to brain activity and from brain activity to visual latent space to visual inputs.
+<br />
+In my research, I aim to <strong>build a image-to-brain encoding (signal generation) model, Img2EEG, to gain deeper insights into visual perception by studying the mapping from visual iputs to neural representations</strong>.
+</p>
 
-<p>Some fun facts about the setup of this project include:</p>
+<blockquote>
+  <p>Inter-individual neural converters</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+One of the challenges in cognitive and computational neuroscience is that models trained on one subject do not generalize to other subjects due to individual differences. An ideal solution to this problem is to <strong>develop an individual-to-individual neural converter</strong> that can generate real neural signals of one subject from those of another one. This would enable us to overcome the challenge of individual differences in cognitive and computational models.
+<br />
+My research focuses on proposing novel inter-individual EEG converters, EEG2EEG, which can realize a flexible and high-performance mapping from invidual to indivual. This work has the potential to provide valuable insights for both neural engineering and cognitive neuroscience.
+</p>
 
-<ul>
-  <li>Built for <a href="http://jekyllrb.com">Jekyll</a></li>
-  <li>Developed on GitHub and hosted for free on <a href="https://pages.github.com">GitHub Pages</a></li>
-  <li>Coded with <a href="http://sublimetext.com">Sublime Text 2</a>, an amazing code editor</li>
-  <li>Designed and developed while listening to music like <a href="https://soundcloud.com/maddecent/sets/blood-bros-series">Blood Bros Trilogy</a></li>
-</ul>
-
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/poole/issues/new">open an issue on GitHub</a> or <a href="https://twitter.com/mdo">ask me on Twitter</a>.</p>
-
-<p>Thanks for reading!</p>
+<blockquote>
+  <p>Reverser engineering to interpret neural mechanisms</p>
+</blockquote>
+<p class="message" style="font-size: 16px;">
+Recently, artificial neural networks (ANNs) have shown remarkable progress in achieving human-level performance in object and face recognition tasks. In my research, I am exploring the use of hypothesis-driven reverse engineering to provide a novel approach to understanding the neural mechanisms underlying object and face perception. The approach involves <strong>manipulating ANN activations based on different hypotheses and comparing the modified representations to human brain representations</strong>. This allows us to make inferences about the neural mechanisms underlying human behaviors and gain deeper insights into the functioning of object and face recognition systems.
+</p>
 
 </div>
     </div>
