--- a/publications/index.html
+++ b/publications/index.html
@@ -103,7 +103,7 @@
   <h1 class="page-title">Publications</h1>
   <p><strong><em>Preprints &amp; Manuscripts submitted or in preparation</em></strong>:</p>
 <p class="message" style="font-size: 18px;">
-<strong>Lu, Z</strong>., Wang, Y., &amp; Golomb, J.D. (under review in CCN2024). ReAlnet: Achieving more human-brain like vision via human neural representational alignment. <strong><em>Arxiv</em></strong>. [<a href="/files/2024Lu_CCN_a.pdf">Pdf</a>]
+<strong>Lu, Z</strong>., Wang, Y., &amp; Golomb, J.D. (under review in CCN2024). ReAlnet: Achieving more human-brain like vision via human neural representational alignment. [<a href="/files/2024Lu_CCN_a.pdf">Pdf</a>]
 <br />
 <br />
 <strong>Lu, Z</strong>., &amp; Golomb, J.D. (under review in CCN2024). Probing Human Vision via an Image-to-EEG Encoding Model. [<a href="/files/2024Lu_CCN_b.pdf">Pdf</a>]
